  - bug fix: custom shortcuts should not be recognized when typing
    in a text box (QuickSearch or Nostalgy's completion box)
  - make it work with TB 3.0 (tested with 3.0a1pre)
  - when showing a folder, if no message is currently selected,
    select the last one
  - custom shortcuts are now working in stand-alone message windows

0.2.12
  - bug fix: use the mime-decoded version for the subject (for matching
    rules and searching messages with same subject); needed to deal
    with accents in subjects
  - remove re:/fwd:/[...] strings from subjects (for matching rules
    and searching messages with same subject)

0.2.11
  - bug fix: Virtual Folder were not found under some circumstances
  - bug fix: internal naming conflict with the Habu extension

0.2.10
  - bug fix: custom shortcuts did not work in mode "restrict to current
    server"
  - bug fix: the folder cache was invalidated when messages were added to
    or deleted from an imap folder
  - bug fix: the folder listener was not unloaded, causing "ClearNostalgyCache
    is not defined" messages in the Error Console
  - bug fix: "G"oing to a Virtual Folder did not work
  - bug fix: Virtual Folders could not be selected for custom shortcuts
  - bug fix: customized keys for Save/Copy commands did not work
    in stand-alone message windows 

0.2.9
  - the user can define custom shortcuts (Go/Save/Copy to some specific folder)
  - new "shift-G" shortcut (Go as suggested)
  - new option "always include tags"; when disabled, tags are added to the
    completion box only if the input box starts with ":" or if
    there is no matching folder
  - it is possible to create new tags in the completion box
  - the "`" shortcut now cycles through "view messages from same sender"
    -> "view messages with same subject" -> "normal view"

0.2.8
  - make it work again with TB 1.5
  - bug fix: prefix tags with ":" even in "Restrict to current server mode"
  - bug fix for "match only on folder name"

0.2.7