@@ -337,7 +337,7 @@ function onKeyPress(ev) {
     ev.stopPropagation();
     wait_key.value = wait_key_old;
     wait_key = null;
-  } else if (wait_key && ev.keyCode != 13) {
+  } else if (wait_key && (ev.keyCode != 13 || ev.ctrlKey || ev.altKey)) {
     Recognize(ev,wait_key);
     wait_key = null;
   } else if (ev.keyCode == KeyEvent.DOM_VK_RETURN) {
